# empty-arc-clamping-bug-reproduction

./: Cargo.toml  README.md  package.json
.github/workflows/: test.yaml
dnas/forum/workdir/: dna.yaml
dnas/forum/zomes/coordinator/posts/: Cargo.toml
dnas/forum/zomes/coordinator/posts/src/: lib.rs  post.rs  post_to_referreds.rs
dnas/forum/zomes/coordinator/posts/tests/: reproduction.rs  same_test_but_with_default_conductor_config.rs
dnas/forum/zomes/integrity/posts/src/: lib.rs  post.rs  post_to_referreds.rs
tests/: package.json
tests/src/forum/posts/: common.ts  post-to-referreds.test.ts  post.test.ts
workdir/: happ.yaml  web-happ.yaml
