[package]
name = "posts"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "posts"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

posts_integrity = { workspace = true }

[dev-dependencies]
fixt = "0.3.1-rc"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, features = ["test_utils"] }
tokio = { version = "1.3", features = ["full"] }
